# tiny_vins_mono

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: docker-build.yml  docker-quick-test.yml
config/: config.yaml  euroc.yaml  kitti360.yaml
data/EuRoC/: readme.md
data/KITTI360/: readme.md
docker/: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.yml  run.sh
include/: vio_system.h
include/backend/: estimator.h  optimizer.h  sliding_window copy.h  sliding_window.h
include/backend/factor/: imu_factor.h  integration_base.h  marginalization_factor.h  pose_local_parameterization.h  projection_factor.h
include/common/: common_types.h  frame.h  image_frame.h
include/common/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h  ScaramuzzaCamera.h
include/common/gpl/: EigenQuaternionParameterization.h  EigenUtils.h  gpl.h
include/config/: config_manager.h
include/frontend/: failure_detector.h  feature_manager.h  feature_tracker.h
include/frontend/camodocal/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h  ScaramuzzaCamera.h
include/frontend/camodocal/gpl/: gpl.h
include/frontend/initialization/: initial_alignment.h  initial_sfm.h  initializer.h  solve_5pts.h
include/utility/: config.h  imu_graph_visualizer.h  measurement_processor.h  measurement_reader.h  test_result_logger.h  utility.h  visualizer.h
logs/: .gitkeep
logs/20250625_061136/: visualizer_pose.txt
logs/20250625_062211/: config.yaml
scripts/: compare_trajectories.py
scripts/dataset_conversion/: kitti360_to_euroc.py
scripts/evaluation/: README.md  compare_trajectories.py
src/: tiny_vins_mono.cpp  vio_system.cpp
src/backend/: estimator.cpp  optimizer.cpp  sliding_window copy.cpp  sliding_window.cpp
src/backend/factor/: marginalization_factor.cpp  pose_local_parameterization.cpp  projection_factor.cpp
src/common/: frame.cpp
src/common/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
src/common/gpl/: EigenQuaternionParameterization.cc  gpl.cc
src/config/: config_manager.cpp
src/frontend/: failure_detector.cpp  feature_manager.cpp  feature_tracker.cpp
src/frontend/camodocal/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
src/frontend/camodocal/gpl/: EigenQuaternionParameterization.cc  gpl.cc
src/frontend/initialization/: initial_alignment.cpp  initial_sfm.cpp  initializer.cpp  solve_5pts.cpp
src/utility/: config.cpp  imu_graph_visualizer.cpp  measurement_processor.cpp  measurement_reader.cpp  test_result_logger.cpp  utility.cpp  visualizer.cpp
